--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal" id="closeAddModal">Close</button>
           <button type="button" class="btn btn-primary" id="saveButton">Save changes</button>
         </div>
       </div>
@@ -120,7 +120,7 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body">
+          <div class="modal-body" id="user">
               <span><p>First Name : John Doe</p><p>Last Name : John Doe</p></span>
           </div>
           
