added a login form which validates input with db

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body" id="user">
+          <div class="modal-body" id="employee">
               <span><p>First Name : John Doe</p><p>Last Name : John Doe</p></span>
           </div>
           
@@ -136,8 +136,8 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body">
-              <form id="employeeForm">
+          <div class="modal-body" id="updateEmployeeBody">
+              <form id="updateEmployeeForm">
                   <div class="form-group">
                     <label for="formGroupExampleInput">First Name</label>
                     <input
