--- a/landing.html
+++ b/landing.html
@@ -23,17 +23,17 @@
                 <div class="form">
                   <form class="register-form">
                     <h3>Change Password</h3>
-                    <input type="text" placeholder="current password"/>
-                    <input type="password" placeholder="new password"/>
-                    <input type="text" placeholder="confirm new password"/>
-                    <button>Change Password</button>
+                    <input id="currentPassword" type="text" placeholder="current password"/>
+                    <input id="newPassword" type="password" placeholder="new password"/>
+                    <input id="confirmPassword" type="text" placeholder="confirm new password"/>
+                    <button id="changePasswordButton">Change Password</button>
                     <p class="message">Already an Admin? <a href="#">Sign In</a></p>
                   </form>
                   <form class="login-form">
                     <h3>Login</h3>
-                    <input type="text" placeholder="username"/>
-                    <input type="password" placeholder="password"/>
-                    <button>login</button>
+                    <input id="username" type="text" placeholder="username"/>
+                    <input id="password" type="password" placeholder="password"/>
+                    <button id="loginButton">login</button>
                     <p class="message">Security Bridged? <a href="#">Change Password</a></p>
                   </form>
                 </div>
@@ -45,7 +45,8 @@
     <script src="js/jquery.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/sweetalert2.all.min.js"></script>
+    <script src="js/landing.js"></script>
 </body>
 
 </html>
