added edit modal functionality, input can now retain data but cannot update yet

--- a/landing.html
+++ b/landing.html
@@ -50,3 +50,23 @@
 </body>
 
 </html>
+
+
+<span><h5>Position </h5><p>${employee.position}</p></span>
+
+<div class="container">
+    <div class="row">
+      <div class="col-sm">
+          <h5>Position </h5>
+          <p>${employee.position}</p>
+      </div>
+      <div class="col-sm">
+          <h5>Position </h5>
+          <p>${employee.position}</p>
+      </div>
+      <div class="col-sm">
+          <h5>Position </h5>
+          <p>${employee.position}</p>
+      </div>
+    </div>
+  </div>
