added update feature, everything working well

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal" id="closeAddModal">Close</button>
-          <button type="button" class="btn btn-primary" id="saveButton">Save changes</button>
+          <button type="button" class="btn btn-primary" id="saveButton">Save</button>
         </div>
       </div>
     </div>
@@ -142,7 +142,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal" id="closeAddModal">Close</button>
-            <button type="button" class="btn btn-primary" id="saveButton">Save changes</button>
+            <button type="button" class="btn btn-primary" id="saveCHangesButton">Save changes</button>
           </div>
         </div>
       </div>
