added update feature, everything working well

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal" id="closeAddModal">Close</button>
-          <button type="button" class="btn btn-primary" id="saveButton">Save changes</button>
+          <button type="button" class="btn btn-primary" id="saveButton">Save</button>
         </div>
       </div>
     </div>
@@ -142,7 +142,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal" id="closeAddModal">Close</button>
-            <button type="button" class="btn btn-primary" id="saveButton">Save changes</button>
+            <button type="button" class="btn btn-primary" id="saveCHangesButton">Save changes</button>
           </div>
         </div>
       </div>
@@ -207,7 +207,9 @@
     <script src="js/sweetalert2.all.min.js"></script>
     <script src="js/datatables.min.js"></script>
     <script src="js/bootstrap.datatables.min.js"></script>
-    <script src="https:code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="js/request.js"></script>
+    <script src="js/utils.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
