added decagon logo to loginPage

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
         <div class="login-page">
+          <center><img class="mb-2" src="img/decagonLogo.png" alt="decagonLogo" width="250px" height="50px"></center>
                 <div class="form">
                   <form class="register-form">
                     <h3>Change Password</h3>
