changed thead color

--- a/dashboard.html
+++ b/dashboard.html
@@ -23,7 +23,7 @@
     <!--START OF NAVBAR-->
     <nav class="navbar navbar-dark mb-5" style="background-color: #229954;">
       <div class="container">
-        <a class="navbar-brand" href="#">Simple Meeting Attendance System</a>
+        <a class="navbar-brand" href="#">Meeting Attendance System</a>
         <div class="dropdown">
             <a class="btn btn-success dropdown-toggle" style="background-color: #229954;" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i class="fas fa-user"></i> Admin
