--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Attendance System</title>
+    <script src="js/jquery.js"></script>
+    <script src="js/index.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/sweetalert2.min.css" />
     <link rel="stylesheet" href="css/loginPage.css" />
@@ -24,7 +26,7 @@
                     <p class="message">Already an Admin? <a href="#">Sign In</a></p>
                   </form>
                   <form class="login-form">
-                    <h3>Login</h3>
+                    <h3>Admin Login</h3>
                     <input id="username" type="text" placeholder="username"/>
                     <input id="password" type="password" placeholder="password"/>
                     <button id="loginButton">login</button>
@@ -35,11 +37,11 @@
               </div>
 
 
-    <script src="js/jquery.js"></script>
+    
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/sweetalert2.all.min.js"></script>
-    <script src="js/index.js"></script>
+    
 </body>
 
 </html>
